ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sanfrancisco-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/load-balancer-name: sanfrancisco-alb
    alb.ingress.kubernetes.io/group.name: sanfrancisco-group
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
spec:
  rules:
    - host: www.sanfranciscoveterinaria.com
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: api.sanfranciscoveterinaria.com
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service
                port:
                  number: 80
